# chrono-g

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
main/: CMakeLists.txt  Kconfig.projbuild  aircraft_turn_img.c  display_port.c  display_port.h  idf_component.yml  lv_font_g_meter_150.c  lv_font_g_meter_96.c  lv_font_seven_segment_64.c  main.c  main.h  turn_coord_img.c  visibility_manager.c  visibility_manager.h
main/components/aircraft_header/: aircraft_header.c  aircraft_header.h
main/components/aircraft_selector/: aircraft_selector.c  aircraft_selector.h
main/components/artificial_horizon/: artificial_horizon.c  artificial_horizon.h  artificial_horizon_ekf_wrapper.cpp  artificial_horizon_ekf_wrapper.h  artificial_horizon_esp_dsp.c  copilot-instructions.md
main/components/cyan_stopwatch/: cyan_stopwatch.c  cyan_stopwatch.h
main/components/g_meter/: g_meter.c  g_meter.h
main/components/imu/: copilot-instructions.md  imu.c  imu.h  qmi8658.h
main/components/magenta_stopwatch/: magenta_stopwatch.c  magenta_stopwatch.h
main/components/turn_indicator/: turn_indicator.c  turn_indicator.h
main/components/yellow_stopwatch/: yellow_stopwatch.c  yellow_stopwatch.h
