idf_component_register(SRCS "main.c"
                                "display_port.c"
                                "visibility_manager.c"
                                "components/cyan_stopwatch/cyan_stopwatch.c"
                                "components/yellow_stopwatch/yellow_stopwatch.c"
                                "components/magenta_stopwatch/magenta_stopwatch.c"
                                "components/g_meter/g_meter.c"
                                "components/turn_indicator/turn_indicator.c"
                                "components/imu/imu.c"
                                "components/aircraft_selector/aircraft_selector.c"
                                "components/aircraft_header/aircraft_header.c"
                                "lv_font_seven_segment_64.c"
                                "lv_font_g_meter_96.c"
                                "turn_coord_img.c"
                                "aircraft_turn_img.c"
                    INCLUDE_DIRS "."
                                
                                "components/cyan_stopwatch"
                                "components/yellow_stopwatch"
                                "components/magenta_stopwatch"
                                "components/g_meter"
                                "components/turn_indicator"
                                "components/imu"
                                "components/aircraft_selector"
                                "components/aircraft_header")